--- a/templates/index.html
+++ b/templates/index.html
@@ -52,6 +52,21 @@
             font-size: 0.9rem;
             margin: 5px 0;
         }
+        .star {
+            font-size: 1.1rem;
+            letter-spacing: 1px;
+        }
+        .star.full {
+            color: gold;
+        }
+        .star.empty {
+            color: #555;
+        }
+        .stars span {
+            color: #ccc;
+            font-weight: normal;
+            margin-left: 5px;
+        }
         .overlay .btn {
             margin: 5px 4px 0 0;
         }
@@ -92,7 +107,10 @@
                 <img src="{{ movie.img_url }}" alt="{{ movie.title }}" class="movie-img">
                 <div class="overlay">
                     <h5>{{ movie.title }} ({{ movie.year }})</h5>
-                    <p>⭐ {{ movie.rating }}/10</p>
+                    <p class="stars">
+                        {{ movie.rating|stars|safe }}
+                        <span>({{ movie.rating }}/10)</span>
+                    </p>
                     <p>{{ movie.review }}</p>
                     {% if movie.trailer_url %}
                         <a href="{{ movie.trailer_url }}" class="btn btn-sm btn-outline-light" target="_blank">🎬 Watch Trailer</a>
